now able to use user survey results as prompts

--- a/ChatDPT/requirements.txt
+++ b/ChatDPT/requirements.txt
@@ -1,10 +1,4 @@
 streamlit
-folium 
-streamlit_folium
-geopy
-pandas
-osmnx
-networkx
-streamlit-image-select==0.6.0
-prettymapp
 langchain
+langchain-openai
+openai
