--- a/ChatDPT/Dockerfile
+++ b/ChatDPT/Dockerfile
@@ -1,14 +1,13 @@
-FROM python:3.9-slim
-FROM gboeing/osmnx:latest
+FROM python:3.11-slim
 
 WORKDIR /app
 
 COPY requirements.txt .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 COPY . .
 
 EXPOSE 8501
 
-CMD ["streamlit", "run", "app.py", "--server.address", "0.0.0.0", "--server.port", "8501"]
+CMD ["streamlit", "run", "app1.py", "--server.address", "0.0.0.0", "--server.port", "8501"]
