update requirement.txt for map funcitons

--- a/ChatDPT/requirements.txt
+++ b/ChatDPT/requirements.txt
@@ -3,3 +3,11 @@ langchain
 langchain-openai
 langchain-community
 openai
+geopandas
+shapely
+matplotlib
+prettymapp
+osmnx
+networkx
+folium
+streamlit-folium
