finished preparing user test

--- a/ChatDPT/requirements.txt
+++ b/ChatDPT/requirements.txt
@@ -1,13 +1,13 @@
-streamlit
-langchain
+streamlit==1.35.0
+langchain==0.2.1
 langchain-openai
 langchain-community
-openai
-geopandas
-shapely
-matplotlib
+openai==1.30.3
+geopandas==0.14.4
+shapely==2.0.2
+matplotlib==3.8.4
 prettymapp
 osmnx
-networkx
-folium
+networkx==3.3
+folium==0.16.0
 streamlit-folium
